<resources>
    <string name="app_name">Talky</string>
    <string name="talky">Talky</string>
    <string name="sign_up">Sign up with Google</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_have">Already Have an Account?</string>
    <string name="sign_up_here">Sign up Here</string>
    <string name="sign_up_now">Sign up</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter you password</string>
    <string name="forget_password"><u>Forgot Password?</u></string>
    <string name="dont_have">Does\'nt have an account?</string>
    <string name="go_to_sign_up"><u>Sign up here</u></string>
    <string name="go_to_sign_in"><u>Sign in here</u></string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
</resources>